# hpcfs_bench

./: .gitignore  CMakeLists.txt  README.md  config.sh  data_plane_setup.sh  requirements.txt  run_all_tests.sh
protos/: CMakeLists.txt  generate.sh  hpcfs_bench.proto
setup_scripts/: alluxio_setup.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/comm_utils/: CMakeLists.txt  communicator.hpp  safe_queue.cpp  safe_queue.hpp
src/controller/: controller.ipynb  generate_proto.sh  run.sh  setup.sh
src/controller/.ipynb_checkpoints/: controller-checkpoint.ipynb
src/fs_test/: base_test.hpp  base_test_types.hpp  test_common.hpp
src/fs_test/correctness_tests/: file_lock_test.cpp  hardlink_test.cpp  posix_permissions_test.cpp  symlink_read_test.cpp
src/fs_test/performance_benchmarks/: cache_read_bench.cpp  conda_env_upload_bench.cpp  metadata_ops_bench.cpp  sequential_write_throughput_bench.cpp
src/server/: CMakeLists.txt  main.cpp
tests/: t01_metadata_bench.sh  t02_data_io_bench.sh  t03_link_correctness.sh  t04_permission_correctness.sh  t05_caching_performance.sh  t06_concurrency_stress.sh
